[gd_scene load_steps=4 format=2]

[ext_resource path="res://sounds/failure.wav" type="AudioStream" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=5]

[node name="Main" type="Control"]
margin_right = 480.0
margin_bottom = 720.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 480, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Failure" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
grow_vertical = 2
rect_min_size = Vector2( 480, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0901961, 0.0941176, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatternTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HUD" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="RoundTimer" to="." method="_on_RoundTimer_timeout"]
[connection signal="player_lost" from="HUD" to="." method="_on_HUD_player_lost"]
[connection signal="show_pattern_complete" from="HUD" to="." method="_on_HUD_show_pattern_complete"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
